--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,13 @@
 source 'https://github.com/CocoaPods/Specs.git'
 #use_frameworks!
 
+platform :ios, '7.0'
+
 target 'greedpatch-ios_Example' do
   pod 'greedpatch-ios', :path => '../'
 end
 
 target 'greedpatch-ios_Tests' do
   pod 'greedpatch-ios', :path => '../'
-
   
 end
